removed scrollbar to fix centering

--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
     align-items: center;
 }
 
+.headcontainer {
+    background-color: green;
+}
+
 .main {
     display: flex;
     flex-direction: column;
@@ -111,24 +115,7 @@ li {
 
 /* Scrollbar */
 ::-webkit-scrollbar {
-    width: 10px;
-}
-
-::-webkit-scrollbar-track {
-    background: #f1f1f12c;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 20px;
-}
-
-::-webkit-scrollbar-track-piece {
-    background-color: #000000;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    display: none;
 }
 
 #speedcurve {
@@ -197,7 +184,7 @@ a[class=content], a[class=contentlast] {
 
     .guidebody {
         width: 40vw;
-        margin-left: 40px;
+        background-color: red;
     }
 
     #contents {
